Fix content overflow in smaller screens

--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -12,7 +12,7 @@ body {
 
 @media screen and (max-width: 640px) {
     body {
-        width: 100%;
+        width: auto;
     }
 }
 
